--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer>
     <p class="mention">
-        Brut de thé
+        Peinture résonnante
     </p>
     <ul class="navigation">
-        <li><a href="/mentions-legales">mentions légales</a></li>
-        <li><a href="/confidentialite">confidentialité</a></li>
+        <li><a href="https://boutique.peintureresonnante.fr/fr/mentions-l%C3%A9gales">mentions légales</a></li>
+        <li><a href="https://boutique.peintureresonnante.fr/fr/confidentialit%C3%A9">confidentialité</a></li>
     </ul>
 </footer>
