--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class=container>
-    <a href="/"> <img src="/assets/sceau-the.svg" alt="logo brut de thé" class="logo" /></a>
+    <a href="/"> <img src="https://raw.githubusercontent.com/LmaJva/boutique-data/main/logo.svg" alt="logo peinture résonnante" class="logo" /></a>
     <ul class="navigation">
         <li><a href="/">Accueil</a></li>
     </ul>
