--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,5 +2,6 @@
     <a href="/"> <img src="https://raw.githubusercontent.com/LmaJva/boutique-data/main/logo.svg" alt="logo peinture résonnante" class="logo" /></a>
     <ul class="navigation">
         <li><a href="/">Accueil</a></li>
+       <li><a href="https://boutique.peintureresonnante.fr/">Boutique</a></li>
     </ul>
 </header>
