--- a/_sass/perso.scss
+++ b/_sass/perso.scss
@@ -105,6 +105,7 @@ dd.visible {
 footer {
     background: $couleur-footer;
     padding: 0 5rem;
+    margin-top: 3rem;
 }
 
 footer .navigation li a {
