--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <p class="mention">
-        Peinture résonnante
+       &copy; 2023 Peinture Résonnante
     </p>
     <ul class="navigation">
         <li><a href="https://boutique.peintureresonnante.fr/fr/mentions-l%C3%A9gales">mentions légales</a></li>
