ajoute à propos dans le menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header class=container>
     <a href="https://www.peintureresonnante.fr/"> <img src="https://raw.githubusercontent.com/LmaJva/boutique-data/main/logo.svg" alt="logo peinture résonnante" class="logo" /></a>
     <ul class="navigation">
-        <li><a href="/">Accueil</a></li>
+       <li><a href="/">Accueil</a></li>
+       <li><a href="/a-propos">À propos</a></li>
        <li><a href="https://boutique.peintureresonnante.fr/">Boutique</a></li>
     </ul>
 </header>
